# RobotProd

./: .gitignore  .~lock.Описание  ВИМ.docx#  Contor_System_VIM_reconstructed.py  DOCS.md  Dockerfile  Interf.ui  docker-compose.yml  docker_entrypoint.sh  emu.sh  robot.log.bak  robot.service  script.sh  stop.sh  test.py
com_port_emulator/: CMakeLists.txt  package.xml
com_port_emulator/src/: com_port_emulator.cpp
modbus_emulator/: Dockerfile  emulator.py
src/my_robot/: package.xml  setup.py
src/my_robot/launch/: robot.launch.py
src/my_robot/my_robot/: acker_odom.py  camera_node.py  field_mission_node.py  row_driver.py  rs485_bridge.py
src/visual_multi_crop_row_navigation/visual_multi_crop_row_navigation/: featureMatching.py  imageProc.py  visual_servoing_node.py
